src/platform/core/gateway/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.opencloudhub.org"  # Matches everything  # TODO: make more secure or team specific
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: ingress-gateway-cert
